styled and add responsive design on all components inside landing page. also edited and added media queries in nav and footer

--- a/client/src/components/css/LandingProductItems.css
+++ b/client/src/components/css/LandingProductItems.css
@@ -35,4 +35,10 @@
     margin: 0;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .landing__item {
+    min-width: 470px;
+  }
+}
 /*# sourceMappingURL=LandingProductItems.css.map */
