--- a/client/src/components/css/Footer.css
+++ b/client/src/components/css/Footer.css
@@ -73,4 +73,31 @@
   text-decoration: none;
   color: inherit;
 }
+
+@media screen and (min-width: 580px) {
+  .footer .container {
+    padding: 10px 0px;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .footer .container .group {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    grid-gap: 0 20px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .footer .container {
+    width: 85%;
+  }
+  .footer .container .group {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+}
 /*# sourceMappingURL=Footer.css.map */
