--- a/client/src/components/css/Footer.scss
+++ b/client/src/components/css/Footer.scss
@@ -61,3 +61,30 @@
         }
     }
 }
+
+// media query
+@media screen and (min-width: 580px) {
+    .footer{
+        .container{
+            padding: 10px 0px;
+            width: 90%;
+            margin: 0 auto;
+            .group{
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: auto;
+                grid-gap: 0 20px;
+            }
+        }
+    }
+}
+@media screen and (min-width: 992px) {
+    .footer{
+        .container{
+            width: 85%;
+            .group{
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+    }
+}
