--- a/client/src/components/css/LandingProducts.scss
+++ b/client/src/components/css/LandingProducts.scss
@@ -44,10 +44,22 @@
     }
 }
 
+// media query
+
 @media screen and (max-width:360px){
     .wrapper{
         .landing__product{
             height: 260px;
+        }
+    }
+}
+@media screen and (min-width:768px){
+    .wrapper{
+        .landing__product{
+            height: 690px;
+        }
+        .arrow1, .arrow2{
+            top: 40%;
         }
     }
 }
