--- a/client/src/components/css/MainProducts.css
+++ b/client/src/components/css/MainProducts.css
@@ -1,12 +1,12 @@
 .main__products {
-  margin-top: 70px;
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
+  padding: 10px 15px;
 }
 
 .main__products img {
   width: 100%;
-  min-height: 270px;
+  min-height: 100%;
 }
 
 .main__products .product {
@@ -30,5 +30,17 @@
   padding: 10px 15px;
   cursor: pointer;
   text-decoration: none;
+}
+
+@media screen and (min-width: 580px) {
+  .main__products {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    grid-gap: 20px;
+  }
 }
 /*# sourceMappingURL=MainProducts.css.map */
