--- a/client/src/components/css/MainProducts.scss
+++ b/client/src/components/css/MainProducts.scss
@@ -1,11 +1,11 @@
 .main__products{
-    margin-top: 70px;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
+    padding: 10px 15px;
 
     img{
         width: 100%;
-        min-height: 270px;
+        min-height: 100%;
     }
     .product{
         position: relative;
@@ -28,4 +28,14 @@
         text-decoration: none;
     }
 
+}
+
+// media query
+@media screen and (min-width: 580px){
+    .main__products{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        grid-gap: 20px;
+    }
 }
