--- a/client/src/components/css/NewsLetter.scss
+++ b/client/src/components/css/NewsLetter.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400&display=swap');
 .newsletter{
     background-color: #171613;
+    grid-area: nsl;
     .container{
         padding: 10px 15px;
         .title{
@@ -45,6 +46,52 @@
                 color: #718191;
                 font-size: 32px;
                 margin-right: 10px;
+            }
+        }
+    }
+}
+
+// media query
+
+@media screen and (min-width:580px){
+    .newsletter{
+        width: 100%;
+        overflow: hidden;
+        .container{
+            .group{
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                .input{
+                    flex-basis: 50%;
+                }
+            }
+            .socials{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px){
+    .newsletter{
+        .container{
+            max-width: 75%;
+            margin: 0 auto;
+            padding: 0;
+        }
+    }
+}
+@media screen and (min-width: 1200px){
+    .newsletter{
+        padding: 10px ;
+        .container{
+            margin-top: 30px;
+            max-width: 90%;
+            .group{
+                display:block;
             }
         }
     }
