--- a/client/src/components/css/Process.scss
+++ b/client/src/components/css/Process.scss
@@ -33,3 +33,22 @@
         }
     }
 }
+
+// media query
+@media screen and (min-width:768px){
+    .process{
+        .container{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: auto;
+            grid-gap: 20px;
+        }
+    }
+}
+@media screen and (min-width:992px){
+    .process{
+        .container{
+            grid-template-columns: repeat(4, 1fr);
+        }
+    }
+}
