--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -2,3 +2,19 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+body{
+  box-sizing: border-box;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__wrapper{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "footer nsl";
+    position: relative;
+  }
+}
