--- a/client/src/components/nav/css/smallNav.scss
+++ b/client/src/components/nav/css/smallNav.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400&display=swap');
 
-.nav{
+.small__nav{
     .container{
         position: relative;
         .overlay{
@@ -123,10 +123,12 @@
                 ul{
                     padding:0;
                     li{
+                        text-transform: capitalize;
                         padding: 10px 20px;
                         border-bottom: 1px solid rgb(224, 224, 224);
                         list-style: none;
                         margin: 20px 0 0;
+                        cursor: pointer;
                     }
                 }
             }
@@ -236,65 +238,4 @@
             }
         }
     }   
-}
-
-@media screen and (min-width: 992px) {
-    .nav{
-        .container{
-            max-width: 100%;
-            .overlay{
-                display: none;
-            }
-            .wrapper{
-                width: 100%;
-                .logo{
-                    flex: 1;
-                    margin-left: 30px;
-                }
-                .menu__icon{
-                    display: none;
-                }
-                .cart__div{
-                    flex: 0.4;
-                    .bigger__screen__auth{
-                        display: inline-block;
-                    }
-                }
-            }
-
-            .menu{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                position: relative;
-                top: 0;
-                max-width: 100%;
-                height: auto;
-                overflow: hidden;
-                background-color: #e5e2e2;
-                .icon__div{
-                    display: none;
-                }
-                .menu__list{
-                    flex: 1;
-                    padding: 7px 0;
-                    ul{
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        li{
-                            padding: 0 20px;
-                            margin: 0 30px;
-                            border: none;
-                            font-weight: normal;
-                            color: rgb(37, 37, 37);
-                        }
-                    }
-                }
-                .smaller__screen__auth{
-                    display: none !important;
-                }
-            }
-        }
-    }
 }
