--- a/client/src/components/css/Products.scss
+++ b/client/src/components/css/Products.scss
@@ -3,15 +3,19 @@
 .products__section{
     margin: 30px 0;
     .container{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto;
-        grid-gap: 20px;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 0 10px;
         width: 100%;
-        margin: 0 auto;
-        overflow: hidden;
-        padding: 10px;
+        margin: auto;
         .item{
+            width: 50%;
+            flex-grow:0;
+            padding: 0 5px;
+            margin-bottom: 40px;
+            list-style: none;
+            vertical-align: top;
             a{
                 text-decoration: none;
                 color: inherit;
@@ -20,13 +24,13 @@
             .img{
                 position: relative;
                 width: 100%;
-                margin: 0 auto;
-                padding: 10px;
                 img{
                     cursor: pointer;
                     width: 100%;
-                    height: 100%;
-                    margin: 0 auto;
+                    max-width: 100%;
+                    max-height: 100%;
+                    object-fit: cover;
+                    vertical-align: bottom;
                 }
         
                 .purchase__icon{
@@ -53,7 +57,6 @@
                 }
             }
             .body{
-                padding: 0 10px ;
                 a{
                     text-align: center;
                 }
@@ -68,3 +71,45 @@
 }
 
 // media queries
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .products__section{
+        .container{
+            .item{
+                width: 33.33%;
+                padding: 0 8px;
+                &:nth-child(3n - 2){
+                    padding-left: 0;
+                    padding-right: 14px;
+                }
+                &:nth-child(3n - 1){
+                    padding: 0 7px;
+                }
+                &:nth-child(3n){
+                    padding-right: 0;
+                    padding-left: 11px;
+                }
+                .img{
+                    img{
+                        border: 0;
+                        max-width: 100%;
+                        vertical-align: top;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width:1025px) {
+    .products__section{
+        .container{
+            .item{
+                width: 20%;
+                .img{
+                    display: block;   
+                }
+            }
+        }
+    }
+}
