--- a/client/src/components/css/checkout.css
+++ b/client/src/components/css/checkout.css
@@ -30,6 +30,10 @@
   margin-top: 10px;
 }
 
+.checkout .cart__items .cart__table__container {
+  display: none;
+}
+
 .checkout .form__div {
   text-align: center;
   width: 100%;
@@ -66,5 +70,80 @@
 .checkout .btn__div .checkout__btn {
   background-color: #171613;
   color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .checkout .cart__items .cart__table__container {
+    display: inline-block;
+    width: 100%;
+    padding: 10px 20px 0 40px;
+  }
+  .checkout .cart__items .cart__tabel {
+    display: table;
+    width: 100%;
+    border-collapse: collapse;
+  }
+  .checkout .cart__items .cart__tabel .cart__row {
+    display: table-row;
+    position: relative;
+  }
+  .checkout .cart__items .cart__tabel .cart__row .section__header {
+    display: table-cell;
+    text-align: start;
+    font-weight: 700;
+    border: 0;
+    font-size: 12px;
+    line-height: 1.5em;
+    padding: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    background: #efefef;
+  }
+  .checkout .cart__items .cart__tabel .cart__row .header__qty, .checkout .cart__items .cart__tabel .cart__row .header__price {
+    width: 136px;
+  }
+  .checkout .form__div form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 20px;
+  }
+  .checkout .form__div form input {
+    width: 100%;
+    border-radius: 0;
+  }
+  .checkout .form__div form .btn__div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .checkout .form__div form .btn__div button {
+    padding: 10px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .checkout .form__div {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .checkout {
+    max-width: 75%;
+    margin: 0 auto;
+  }
+  .checkout .form__div {
+    width: 50%;
+  }
 }
 /*# sourceMappingURL=checkout.css.map */
