--- a/client/src/components/css/checkoutItems.scss
+++ b/client/src/components/css/checkoutItems.scss
@@ -1,30 +1,30 @@
-.payment__items{
-    margin: 10px 0 !important;
-    .item{
-        .img{
-            border-radius: 12px !important;
-            border: none !important;
-            .img__container{
-                width: 80px !important;
-                padding: 10px 5px !important;
-            }
-        }  
-        .body{
-            table{
-                border-spacing: 0 7px !important;
-                tbody{
-                    @media screen and (min-width: 360px){
-                        display: grid;
-                        grid-template-columns: repeat(2, 1fr);
-                    }
-                    tr{
-                        padding: 0;
-                    }
-                }
-            }
-        }      
-    }
-}
+// .payment__items{
+//     margin: 10px 0 !important;
+//     .item{
+//         .img{
+//             border-radius: 12px !important;
+//             border: none !important;
+//             .img__container{
+//                 width: 80px !important;
+//                 padding: 10px 5px !important;
+//             }
+//         }  
+//         .body{
+//             table{
+//                 border-spacing: 0 7px !important;
+//                 tbody{
+//                     @media screen and (min-width: 360px){
+//                         display: grid;
+//                         grid-template-columns: repeat(2, 1fr);
+//                     }
+//                     tr{
+//                         padding: 0;
+//                     }
+//                 }
+//             }
+//         }      
+//     }
+// }
 .checkout__items, .payment__items{
     margin: 30px 0;
     .item{
@@ -52,6 +52,9 @@
         .body{
             flex: 0.70;
             margin-left: 20px;
+            .cart__tabel{
+                display: none;
+            }
             a{
                 color: #000;
                 text-decoration: none;
@@ -175,5 +178,100 @@
             }
         }
 
+    }
+}
+
+
+// media query
+
+@media screen and (min-width:768px) {
+    .checkout__items{
+        .border__bottom{
+            border-bottom: 1px solid #e4e4e4;
+            margin: 20px 25px;
+        }
+        .item{
+            display: inline-block;
+            padding: 0;
+            .img__small__screen{
+                display: none;
+            }
+            .body{
+                position: relative;
+                .body__title{
+                    display: none;
+                }
+                .cart__tabel{
+                    display: table;
+                    width: 100%;
+                    border-collapse: collapse;
+                    .cart__row{
+                        display: table-row;
+                        position: relative;
+                        .section__header{
+                            display: table-cell;
+                            text-align: start;
+                            font-weight: 700;
+                            border: 0;
+                            font-size: 12px;
+                            line-height: 1.5em;
+                            padding: 15px;
+                            text-transform: uppercase;
+                            letter-spacing: 1px;
+                            background: #efefef;
+                        }
+                        .cart__cell{
+                            display: table-cell;
+                            text-align: start;
+                            font-size: 12px;
+                            line-height: 1.5em;
+                            padding: 15px 20px;
+                            text-transform: uppercase;
+
+                        }
+                        .item__details{
+                            .body__content{
+                                flex: 1;
+                                p{
+                                    font-size: 12px;
+                                    line-height: 1.5em;
+                                    font-weight: 500;
+                                }
+                            }
+                        }
+                        .item__image{
+                            width: 16em;
+                            img{
+                                border: 0;
+                                max-width: 100%;
+                                vertical-align: top;
+                            }
+                        }
+                        .item__qty, .item__price{
+                            width: 136px;
+                        }
+                    }
+                }
+                table{
+                   display: none;
+                }
+                .edit__div{
+                    position: absolute;
+                    bottom: 30px;
+                    left: 12rem;
+                    .edit{
+                        padding-left: 20px;
+                    }
+                    span{
+                        font-size: 1rem !important;
+                    }
+                }
+            }
+        }
+        .edit__form{
+            max-width: 32em;
+            margin: 0;
+            padding: 20px;
+        }
     }
 }
