--- a/client/src/components/nav/css/largeNav.css
+++ b/client/src/components/nav/css/largeNav.css
@@ -101,6 +101,25 @@
   cursor: pointer;
 }
 
+.large__nav .container .wrapper .cart__div .cart__body__div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.large__nav .container .wrapper .cart__div .cart__body__div p {
+  position: absolute;
+  top: -7px;
+  right: -5px;
+  border-radius: 50%;
+  padding: 3px 7px;
+  background-color: #ad1818;
+  color: #e2e2e2;
+  font-weight: bold;
+  font-size: 14px;
+}
+
 .large__nav .container .menu {
   padding: 15px 30px 10px 20px;
   background-color: #dddddd;
